# task_tracker

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: ci.yaml
alembic/: env.py
alembic/versions/: 085a8bf4693f_add_taskstatuschange.py  0b593a56ccb0_add_project_deleted_at.py  15054569d547_init_tasks.py  26f61f6479fa_update_constraint.py  8dc7a4942e59_add_project.py  a51936122df4_add_Task_deleted_at_column.py
src/: .env.example  main.py
src/application/ports/: clock.py  id_generator.py  project_repository.py  task_repository.py  task_status_history_repository.py
src/application/use_cases/: create_project.py  create_task.py  delete_project.py  delete_task.py  get_project_by_id.py  get_task_by_id.py  list_projects.py  list_task_status_history.py  list_tasks.py  purge_project.py  purge_task.py  restore_project.py  restore_task.py  update_project.py  update_task.py
src/domain/: exceptions.py
src/domain/entities/: project.py  task.py  task_status_change.py
src/infrastructure/: config.py
tests/: conftest.py  fakes.py  helpers.py  test_create_project_use_case.py  test_create_task_use_case.py  test_delete_project.py  test_delete_task_use_case.py  test_get_list_project.py  test_get_list_task.py  test_get_project_by_id.py  test_get_task_by_id_use_case.py  test_projects_api.py  test_purge_project.py  test_purge_task.py  test_restore_project_use_case.py  test_restore_task_use_case.py  test_task_status_history.py  test_task_status_history_api.py  test_tasks_api.py  test_update_project.py  test_update_task_use_case.py
(+21 files in other folders)
