[project]
name = "task-tracker"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "alembic>=1.18.4",
    "asyncpg>=0.31.0",
    "fastapi>=0.136.1",
    "greenlet>=3.5.0",
    "mypy>=2.1.0",
    "pre-commit>=4.6.0",
    "pydantic>=2.13.4",
    "pydantic-settings>=2.14.1",
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
    "ruff>=0.15.19",
    "sqlalchemy>=2.0.49",
    "uvicorn>=0.38.0",
]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "ruff>=0.15.19",
    "mypy>=2.1.0",
    "pre-commit>=4.6.0",
]
[tool.pytest.ini_options]
pythonpath = ["."]

[tool.ruff]
line-length = 88
target-version = "py314"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.mypy]
python_version = "3.14"
mypy_path = "."
explicit_package_bases = true
packages = ["src"]
plugins = ["pydantic.mypy"]
warn_return_any = true
warn_unused_ignores = true
